Bug 319220 - Drag-n-Drop addresses removes name capitalization
Summary: Drag-n-Drop addresses removes name capitalization
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: Git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-02 12:36 UTC by Allen Winter
Modified: 2013-06-07 06:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Allen Winter 2013-05-02 12:36:55 UTC
Drag-and-Drop an email address from the header of a reader window into a composer window removes the capitalization of names.

For example: "Fred Jones <fred.jones@anywhere.com>" becomes "fred jones <fred.jones@anywhere.com>"

Reproducible: Always

Steps to Reproduce:
1. open a composer window
2. drag-and-drop an address of the form "Fred Jones <fred.jones@anywhere.com>" from a header in a read window to the composer
3. notice the dropped address shows "fred jones <fred.jones@anywhere.com>"
Comment 1 Laurent Montel 2013-05-02 12:47:38 UTC
I confirm it.
Will look at soon
Comment 2 Laurent Montel 2013-06-07 06:36:08 UTC
Git commit e2774afe3ea820e440009ca5082d2fe036841f9f by Montel Laurent.
Committed on 07/06/2013 at 08:34.
Pushed by mlaurent into branch 'master'.

Fix Bug 319220 - Drag-n-Drop addresses removes name capitalization

FIXED-IN: 4.11

M  +6    -7    kabc/addressee.cpp
M  +1    -1    kabc/vcardtool.cpp

http://commits.kde.org/kdepimlibs/e2774afe3ea820e440009ca5082d2fe036841f9f