Fix Bug 319220 - Drag-n-Drop addresses removes name capitalization

FIXED-IN: 4.11
BUG: 319220